# robotica_movel_simulacao

./: README.md  frames.gv
professor_teste/campos_potenciais/: CMakeLists.txt  package.xml
professor_teste/campos_potenciais/config/: parametros.yaml
professor_teste/campos_potenciais/launch/: campos_potenciais.launch
professor_teste/campos_potenciais/scripts/: potential_fields_node.py
professor_teste/ekf/: CMakeLists.txt  package.xml
professor_teste/ekf/launch/: ekf.launch
professor_teste/ekf/scripts/: ekf_fusion_node.py
professor_teste/lidar_p3dx/: CMakeLists.txt  package.xml
professor_teste/lidar_p3dx/config/: amcl_params.yaml  rviz_config.rviz
professor_teste/lidar_p3dx/launch/: localization.launch  slam.launch
professor_teste/lidar_p3dx/maps/: comando_salvar_mapa.txt  corredor_map.pgm  corredor_map.yaml  corredor_map_obstaculo.pgm  corredor_map_obstaculo.yaml
professor_teste/localizacao_aruco/: CMakeLists.txt  frames.gv  package.xml
professor_teste/localizacao_aruco/launch/: localizacao_aruco.launch
professor_teste/localizacao_aruco/scripts/: localizador_aruco.py
professor_teste/log_posicao/: CMakeLists.txt  package.xml
professor_teste/log_posicao/scripts/: log_posicao.py
professor_teste/p3dx/p3dx_control/launch/: control.launch
professor_teste/p3dx/p3dx_description/urdf/: pioneer3dx.gazebo  pioneer3dx.sdf  pioneer3dx.urdf  pioneer3dx.xml
professor_teste/p3dx_gazebo-master/launch/: p3dx.launch  spawn.launch
professor_teste/p3dx_gazebo-master/xacro/laser/: hokuyo.xacro
professor_teste/p3dx_gazebo-master/xacro/p3dx/: pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_plugins.xacro
professor_teste/p3dx_mover_teclado_teste/: CMakeLists.txt  comando.txt  package.xml
professor_teste/p3dx_teleop/: CMakeLists.txt  package.xml
professor_teste/p3dx_teleop/launch/: teleop.launch
professor_teste/p3dx_teleop/scripts/: teleop_twist_keyboard.py
professor_teste/professor_mundo/launch/: corredor.launch  corredor_pacotes.launch  corredor_real.launch
professor_teste/professor_mundo/worlds/: mundo_corredor.world
