<?xml version="1.0"?>
<package format="2">
  <name>lidar_p3dx</name>
  <version>0.1.0</version>
  <description>Pacote de simulação e localização do robô P3DX com LiDAR e AMCL no ROS Noetic.</description>

  <maintainer email="mateus@todo.todo">Mateus</maintainer>
  <license>MIT</license>

  <!-- Ferramentas de build -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependências em tempo de build -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>gmapping</build_depend>

  <!-- Exportação de dependências para compilação externa -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>

  <!-- Dependências de execução -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <export>
  </export>
</package>

